--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -69,9 +69,13 @@ h1 {
 
 .contact-section {
     height: 100%;
-    padding-top: 150px;
+    padding-top: 100px;
     text-align: center;
     background: #eee;
+}
+
+.contact-section a {
+    font-size:20px;
 }
 
 .header {
@@ -135,4 +139,9 @@ h1 {
 
 #stats-container .row {
     padding-top: 15px;
+}
+
+ul
+{
+    list-style-type: none;
 }
